--- a/src/common/style/property.less
+++ b/src/common/style/property.less
@@ -40,3 +40,11 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.ui-ellipsis-clamp-2{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
