--- a/src/common/style/varlable.less
+++ b/src/common/style/varlable.less
@@ -1,7 +1,7 @@
 @theme-color: #f95d43;
 @font-color-m: #3f3f3f;
 @font-color-input: #8b8b8b;
-@bg-color: #eee;
+@bg-color: #f7f7f7;
 @input-border: #d2d2d2;
 @placehold-color: #adadad;
 @theme-color-blue: #089cf6;
