--- a/src/common/style/varlable.less
+++ b/src/common/style/varlable.less
@@ -1,4 +1,6 @@
-@theme-color: #f95d43;
+@theme-color: rgba(1, 166, 98, 0.87); // 次日达主题色
+@theme-color-this: #2697d9; // 及时送主题色
+@theme-color-price: #fe3526; // 列表价格主题色
 @font-color-m: #3f3f3f;
 @font-color-input: #8b8b8b;
 @bg-color: #f7f7f7;
@@ -6,3 +8,4 @@
 @placehold-color: #adadad;
 @theme-color-blue: #089cf6;
 @next-title-color: #1b1b1b;
+@disabled-color: #d2d2d2;
