--- a/src/common/style/varlable.less
+++ b/src/common/style/varlable.less
@@ -1,4 +1,4 @@
-@theme-color: rgba(1, 166, 98, 0.87); // 次日达主题色
+@theme-color: rgb(1, 166, 98); // 次日达主题色
 @theme-color-this: #2697d9; // 及时送主题色
 @theme-color-price: #fe3526; // 列表价格主题色
 @font-color-m: #3f3f3f;
