--- a/src/common/style/varlable.less
+++ b/src/common/style/varlable.less
@@ -1,4 +1,4 @@
-@theme-color: rgb(1, 166, 98); // 次日达主题色
+@theme-color: #01a662; // 次日达主题色
 @theme-color-this: #2697d9; // 及时送主题色
 @theme-color-price: #fe3526; // 列表价格主题色
 @font-color-m: #3f3f3f;
@@ -6,6 +6,6 @@
 @bg-color: #f7f7f7;
 @input-border: #d2d2d2;
 @placehold-color: #adadad;
-@theme-color-blue: #089cf6;
+@theme-color-blue: #2697d9; // 及时送主题色
 @next-title-color: #1b1b1b;
 @disabled-color: #d2d2d2;
